--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.55.0",
+    "react-hook-form": "^7.56.4",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5",
     "uuid": "^11.1.0",
+    "yup": "^1.6.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
